[gd_scene load_steps=26 format=1]

[ext_resource path="res://scripts/battle.gd" type="Script" id=1]
[ext_resource path="res://scripts/color_palette.gd" type="Script" id=2]
[ext_resource path="res://scripts/player.gd" type="Script" id=3]
[ext_resource path="res://nyan/nyan.tex" type="Texture" id=4]
[ext_resource path="res://nyan/nyan-attack.anm" type="Animation" id=5]
[ext_resource path="res://nyan/nyan-block.anm" type="Animation" id=6]
[ext_resource path="res://nyan/nyan-idle.anm" type="Animation" id=7]
[ext_resource path="res://nyan/nyan-run.anm" type="Animation" id=8]
[ext_resource path="res://fonts/apartNES.fnt" type="BitmapFont" id=9]
[ext_resource path="res://scripts/drake.gd" type="Script" id=10]
[ext_resource path="res://drake/drake.tex" type="Texture" id=11]
[ext_resource path="res://drake/drake-down.anm" type="Animation" id=12]
[ext_resource path="res://drake/drake-fire.anm" type="Animation" id=13]
[ext_resource path="res://drake/drake-fly.anm" type="Animation" id=14]
[ext_resource path="res://drake/drake-idle.anm" type="Animation" id=15]
[ext_resource path="res://drake/drake-up.anm" type="Animation" id=16]
[ext_resource path="res://scripts/HitLabel.gd" type="Script" id=17]
[ext_resource path="res://misc/showhit.anm" type="Animation" id=18]
[ext_resource path="res://misc/bgm.ogg" type="AudioStream" id=19]
[ext_resource path="res://misc/background.tex" type="Texture" id=20]
[ext_resource path="res://misc/fade.tex" type="Texture" id=21]
[ext_resource path="res://misc/dotted-fadein.anm" type="Animation" id=22]
[ext_resource path="res://misc/dotted-fadout.anm" type="Animation" id=23]
[ext_resource path="res://misc/fadein.anm" type="Animation" id=24]

[sub_resource type="Animation" id=1]

resource/name = "drake-bite"
length = 0.48
loop = false
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.12, 0.24, 0.36 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":1, "values":[ 16, 17, 18, 19 ] }

[node name="BattleScene" type="Node"]

script/script = ExtResource( 1 )

[node name="Color Palette" type="Node" parent="."]

script/script = ExtResource( 2 )
color_1 = Color( 0.87451, 0.968627, 0.823529, 1 )
color_2 = Color( 0.545098, 0.745098, 0.454902, 1 )
color_3 = Color( 0.2, 0.403922, 0.317647, 1 )
color_4 = Color( 0.180392, 0.270588, 0.231373, 1 )

[node name="Player" type="Node" parent="."]

editor/display_folded = true
script/script = ExtResource( 3 )
life = 2350
idle = Vector2( 0, 0 )
tap = Vector2( 2, 2 )
hold = Vector2( 4, 4 )
hold_time = 30
block_wait = 30
force = 64
left_pose = 60
right_pose = 260

[node name="Sprite" type="Sprite" parent="Player"]

transform/pos = Vector2( 60, 199 )
z/z = 1
texture = ExtResource( 4 )
vframes = 4
hframes = 4
region_rect = Rect2( 605, 59, 0, 1 )
__meta__ = { "_edit_lock_":true }

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/Sprite"]

playback/process_mode = 0
playback/default_blend_time = 0.01
root/root = NodePath("..")
anims/nyan-attack = ExtResource( 5 )
anims/nyan-block = ExtResource( 6 )
anims/nyan-idle = ExtResource( 7 )
anims/nyan-run = ExtResource( 8 )
next/nyan-block = ""
next/nyan-run = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Label" type="Label" parent="Player"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 8.0
margin/top = 250.0
margin/right = 209.0
margin/bottom = 285.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.180392, 0.270588, 0.231373, 1 )
text = "Battle!"
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Life" type="Label" parent="Player"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = -10.0
margin/right = 211.0
margin/bottom = 25.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.180392, 0.270588, 0.231373, 1 )
text = "||||||||||"
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Drake" type="Node" parent="."]

script/script = ExtResource( 10 )
life = 4560
idle_count = 3
tail_count = 1
fireball_count = 1
bite_count = 1
toggle_alt_count = 1
tail_force = 250
fireball_force = 200
bite_force = 300
tail_cost = 3
fireball_cost = 1
bite_cost = 2
stamina = 0

[node name="Sprite" type="Sprite" parent="Drake"]

visibility/light_mask = 32769
transform/pos = Vector2( 220, 134 )
texture = ExtResource( 11 )
vframes = 6
hframes = 4
frame = 23
region_rect = Rect2( 392, 241, 1, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Drake/Sprite"]

playback/process_mode = 0
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/drake-bite = SubResource( 1 )
anims/drake-down = ExtResource( 12 )
anims/drake-fire = ExtResource( 13 )
anims/drake-fly = ExtResource( 14 )
anims/drake-idle = ExtResource( 15 )
anims/drake-up = ExtResource( 16 )
next/drake-bite = ""
next/drake-down = ""
next/drake-fire = ""
next/drake-idle = ""
next/drake-up = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Life" type="Label" parent="Drake"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 250.0
margin/right = 201.0
margin/bottom = 285.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.180392, 0.270588, 0.231373, 1 )
text = "|||||||||||||||"
align = 2
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Hit" type="Label" parent="Drake"]

editor/display_folded = true
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 240.0
margin/top = 100.0
margin/right = 387.0
margin/bottom = 135.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.180392, 0.270588, 0.231373, 1 )
custom_colors/font_color_shadow = Color( 0.87451, 0.968627, 0.823529, 1 )
custom_constants/shadow_as_outline = 1
text = "Hit"
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 17 )
anim_node = "AnimationPlayer"
animation = "show-hit"
prefix = "hit"
sulffix = ""
x_add = 0
y_add = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Drake/Hit"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/show-hit = ExtResource( 18 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Background" type="Node" parent="."]

editor/display_folded = true

[node name="StreamPlayer" type="StreamPlayer" parent="Background"]

stream/stream = ExtResource( 19 )
stream/play = false
stream/loop = false
stream/volume_db = 12.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Sprite" type="Sprite" parent="Background"]

transform/pos = Vector2( 160, 144 )
z/z = -1
texture = ExtResource( 20 )
__meta__ = { "_edit_lock_":true }

[node name="GameOver" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="GameOver"]

visibility/visible = false
transform/pos = Vector2( 160, 144 )
z/z = 3
texture = ExtResource( 21 )
vframes = 2
hframes = 2
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOver/Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/dotted-fadein = ExtResource( 22 )
anims/dotted-fadeout = ExtResource( 23 )
next/dotted-fadeout = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Node2D" type="Node2D" parent="GameOver"]

editor/display_folded = true
z/z = 4

[node name="Gameover" type="Label" parent="GameOver/Node2D"]

visibility/visible = false
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 160.0
margin/bottom = 145.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.180392, 0.270588, 0.231373, 1 )
custom_colors/font_color_shadow = Color( 0.545098, 0.745098, 0.454902, 1 )
custom_constants/shadow_as_outline = 0
text = "GAME OVER\nyou lose"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOver/Node2D/Gameover"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fadein = ExtResource( 24 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="on_gameover" from="." to="." method="_on_BattleScene_on_gameover"]

[connection signal="on_attacked" from="Player" to="Player" method="_on_Player_on_attacked"]

[connection signal="on_dead" from="Player" to="Player" method="_on_Player_on_dead"]

[connection signal="on_win" from="Player" to="Player" method="_on_Player_on_win"]

[connection signal="on_attacked" from="Drake" to="Drake" method="_on_Drake_on_attacked"]

[connection signal="on_dead" from="Drake" to="Drake" method="_on_Drake_on_dead"]

[connection signal="on_win" from="Drake" to="Drake" method="_on_Drake_on_win"]


